registry lifecycle independent of k3s cluster

--- a/etc/TODO
+++ b/etc/TODO
@@ -1,3 +1,4 @@
+k3d registry create registry.localhost --port 5555
 k3d kubeconfig merge -d -s immanent
 k3d kubeconfig merge -d -s roke
 tilt up --context k3d-roke
