--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 0.0.27
 
 powerline show VERSION, VENDOR, and latest git tag
+nix install bashInteractive for interactive shell
+earthly replace codeserver build target with flake
+fly dont install codeserver (just another user flake)
+npm upgrade 9.1.3
 
 
 0.0.26
